--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-07-28 Sun 00:58 -->
+<!-- 2024-07-28 Sun 01:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>FF7 PC Input Repeat Feature, and the DI bug fix</title>
@@ -379,10 +379,10 @@ Whats happening?
 </p>
 
 <ul class="org-ul">
-<li>*Now hold Down (or Up, doesn't matter) and alternate L2 and R2 faster</li>
+<li><b>Now hold Down (or Up, doesn't matter) and alternate L2 and R2
+faster than the Square mash.</b></li>
 </ul>
 <p>
-than the Square mash.*
 Whats happening?
 </p>
 
@@ -2484,7 +2484,7 @@ the picture in a way such methods require.
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2024-07-01 Mon 20:04</p>
-<p class="date">Created: 2024-07-28 Sun 00:58</p>
+<p class="date">Created: 2024-07-28 Sun 01:23</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
