added ref links to "Repeat is active flag"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-07-28 Sun 01:23 -->
+<!-- 2024-07-28 Sun 13:03 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>FF7 PC Input Repeat Feature, and the DI bug fix</title>
@@ -870,6 +870,11 @@ Back Links:<br />
 <div class="outline-text-3" id="text-009A8734%20-%20aka%2034%20-%20Repeat%20is%20active%20flag">
 <p>
 <br />
+Reference Links:<br />
+<a href="#009A8714%20-%20aka%2014%20-%20Current%20input%20repeat%20wait">009A8714 - aka 14 - Current input repeat wait</a><br />
+<a href="#009A8730%20-%20aka%2030%20-%20Timer">009A8730 - aka 30 - Timer</a><br />
+<a href="#009A85E0%20-%20aka%20E0%20-%20Recent%20inputs%2Fkeys%2C%20or%20keys%20this%20frame">009A85E0 - aka E0 - Recent inputs/keys, or keys this frame</a><br />
+<a href="#009A85D4%20-%20aka%20D4%20-%20All%20held%20inputs%2Fkeys">009A85D4 - aka D4 - All held inputs/keys</a>
 </p>
 
 <p>
@@ -2484,7 +2489,7 @@ the picture in a way such methods require.
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2024-07-01 Mon 20:04</p>
-<p class="date">Created: 2024-07-28 Sun 01:23</p>
+<p class="date">Created: 2024-07-28 Sun 13:03</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
