--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-07-28 Sun 13:03 -->
+<!-- 2024-07-28 Sun 17:42 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>FF7 PC Input Repeat Feature, and the DI bug fix</title>
@@ -419,7 +419,7 @@ bonkers.
 </p>
 
 <p>
-Speed runners my find this last test illuminating as its been long
+Speed runners may find this last test illuminating as its been long
 believed that double input is only present when pressing a button
 shortly after pressing another. Rather than always possible as long as
 a repeatable button is held within a menu.
@@ -2489,7 +2489,7 @@ the picture in a way such methods require.
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2024-07-01 Mon 20:04</p>
-<p class="date">Created: 2024-07-28 Sun 13:03</p>
+<p class="date">Created: 2024-07-28 Sun 17:42</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
